recipe-az-aks-app-app-gateway/n8n-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: homelab-n8n
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: n8n.52.191.203.202.nip.io
    http:
      paths:
      - backend:
          service:
            name: n8n
            port:
              number: 80
        path: /
        pathType: Prefix
