recipe-az-aks-app-app-gateway/test-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: homelab-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: homelab-test
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  namespace: homelab-test
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: 135.234.244.76.nip.io
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
